Setting maven compiler java version

--- a/expenses-manager-backend/pom.xml
+++ b/expenses-manager-backend/pom.xml
@@ -18,6 +18,8 @@
 
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
     </properties>
 
     <dependencies>
