Add database connection

--- a/expenses-manager-backend/src/main/resources/application.properties
+++ b/expenses-manager-backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=expenses-manager-backend
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/expense_manager
+spring.datasource.username=root
+spring.datasource.password=1q2w3
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
