--- a/expenses-manager-backend/src/main/resources/application.properties
+++ b/expenses-manager-backend/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=1q2w3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+spring.sql.init.mode=always
