Fix: Set working directory for npm install and build
Configured workflow to use the correct working directory

--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -23,9 +23,13 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: ./src/main/frontend
+
 
     - name: Build Angular application
       run: npm run build --prod
+      working-directory: ./src/main/frontend
+
 
     - name: Terraform Output - Get VM IP
       id: get-vm-ip
