--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -25,29 +25,40 @@ jobs:
       run: npm install
       working-directory: ./src/main/frontend
 
-
     - name: Build Angular application
       run: npm run build --prod
       working-directory: ./src/main/frontend
 
+    - name: Azure CLI Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Terraform Output - Get VM IP
+    - name: Get VM Public IP
       id: get-vm-ip
-      run: echo "::set-output name=vm_ip::$(terraform output -raw public_ip)"
+      run: |
+        az vm list-ip-addresses --name ${{ secrets.EXM_VM_NAME }} --resource-group ${{ secrets.RESOURCE_GROUP_NAME }} --query "[0].virtualMachine.network.publicIpAddresses[0].ipAddress" -o tsv
+      continue-on-error: true
 
     - name: SSH into VM and install Nginx
       run: |
-        ssh -o StrictHostKeyChecking=no $TF_VAR_admin_username@${{ steps.get-vm-ip.outputs.vm_ip }} << 'EOF'
+        ssh -o StrictHostKeyChecking=no $admin_username@${{ steps.get-vm-ip.outputs.vm_ip }} << 'EOF'
           sudo apt-get update
           sudo apt-get install nginx -y 
         EOF
+      env:
+        admin_username: ${{ secrets.ADMIN_USERNAME }}
 
     - name: Copy build files to VM
       run: |
-        scp -o StrictHostKeyChecking=no -r dist/* $TF_VAR_admin_username@${{ steps.get-vm-ip.outputs.vm_ip }}:/var/www/html/
+        scp -o StrictHostKeyChecking=no -r dist/* $admin_username@${{ steps.get-vm-ip.outputs.vm_ip }}:/var/www/html/
+      env:
+        admin_username: ${{ secrets.ADMIN_USERNAME }}
 
     - name: Restart Nginx
       run: |
-        ssh -o StrictHostKeyChecking=no $TF_VAR_admin_username@${{ steps.get-vm-ip.outputs.vm_ip }} << 'EOF'
+        ssh -o StrictHostKeyChecking=no $admin_username@${{ steps.get-vm-ip.outputs.vm_ip }} << 'EOF'
           sudo systemctl restart nginx 
         EOF
+      env:
+        admin_username: ${{ secrets.ADMIN_USERNAME }}
