fix: Updated working directory paths for EXM FE build

--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -23,11 +23,11 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      working-directory: ./src/main/frontend
+      working-directory: src/main/frontend
 
     - name: Build Angular application
       run: npm run build --prod
-      working-directory: ./src/main/frontend
+      working-directory: src/main/frontend
 
     - name: Azure CLI Login
       uses: azure/login@v1
