--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches:
       - main
+      
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   build-and-deploy:
@@ -21,7 +25,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '20.16.0'
-
+ 
     - name: Install dependencies
       run: npm install
       working-directory: expenses-manager-frontend/src/main/frontend
