--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -31,7 +31,7 @@ jobs:
       working-directory: expenses-manager-frontend/src/main/frontend
 
     - name: Build Angular application
-      run: npm run build --configuration production
+      run: npm run build 
       working-directory: expenses-manager-frontend/src/main/frontend
 
     - name: Azure CLI Login
