--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -44,8 +44,8 @@ jobs:
     - name: Get VM Public IP
       id: get-vm-ip
       run: |
-        echo "##[set-output name=vm_ip;]$(az vm list-ip-addresses --name ${{ secrets.EXM_VM_NAME }} --resource-group ${{ secrets.RESOURCE_GROUP_NAME }} --query "[0].virtualMachine.network.publicIpAddresses[0].ipAddress" -o tsv)"
-
+        echo "vm_ip=$(az vm list-ip-addresses --name ${{ secrets.EXM_VM_NAME }} --resource-group ${{ secrets.RESOURCE_GROUP_NAME }} --query "[0].virtualMachine.network.publicIpAddresses[0].ipAddress" -o tsv)" >> $GITHUB_OUTPUT
+            
     - name: Create SSH private key file
       run: |
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ssh_key
