Fixed SCP permission issue
Resolved permission issues by copying build files to /tmp/ before moving them to /var/www/html/.

--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -62,8 +62,15 @@ jobs:
 
     - name: Copy build files to VM
       run: |
-        scp -i ssh_key -o StrictHostKeyChecking=no -r expenses-manager-frontend/target/* ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }}:/var/www/html/
-      
+        scp -i ssh_key -o StrictHostKeyChecking=no -r expenses-manager-frontend/target/* ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }}:/tmp/  
+
+    - name: Move build files to the correct directory
+      run: |
+        ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
+          sudo mv /tmp/* /var/www/html/
+          sudo chown -R www-data:www-data /var/www/html/
+        EOF
+
     - name: Restart Nginx
       run: |
         ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
