--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -21,18 +21,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20.16.0'
- 
-    - name: Install dependencies
-      run: npm install
-      working-directory: expenses-manager-frontend/src/main/frontend
+    - name: Download and install Maven
+      run: sudo apt-get update && sudo apt-get install -y maven
 
-    - name: Build Angular application
-      run: npm run build 
-      working-directory: expenses-manager-frontend/src/main/frontend
+    - name: Build Angular application using Maven
+      run: mvn clean install
+      working-directory: expenses-manager-frontend
 
     - name: Azure CLI Login
       uses: azure/login@v2 
@@ -70,7 +64,7 @@ jobs:
           sudo mv /tmp/frontend/* /var/www/html/
           sudo chown -R www-data:www-data /var/www/html/
         EOF
-
+    
     - name: Restart Nginx
       run: |
         ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
