--- a/.github/workflows/build_deploy_exm_be.yml
+++ b/.github/workflows/build_deploy_exm_be.yml
@@ -21,10 +21,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Java
+    - name: Set up Java 17
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
 
     - name: Install Maven
