--- a/.github/workflows/build_deploy_exm_be.yml
+++ b/.github/workflows/build_deploy_exm_be.yml
@@ -34,8 +34,8 @@ jobs:
       run: mvn clean install
       working-directory: expenses-manager-backend
 
-    - name: List Target Directory
-      run: ls expenses-manager-backend/target
+    - name: List target directory contents
+      run: ls -l expenses-manager-backend/target/
 
     - name: Azure CLI Login
       uses: azure/login@v2
@@ -63,7 +63,7 @@ jobs:
 
     - name: Copy Artifact to VM
       run: |
-        scp -i ssh_key -o StrictHostKeyChecking=no expenses-manager-backend/target/*.jar ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }}:/home/admin/
+       scp -i ssh_key -o StrictHostKeyChecking=no expenses-manager-backend/target/*.jar ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }}:/home/admin/expenses-manager-backend.jar
 
     - name: Run Backend Application
       run: |
