--- a/.github/workflows/build_deploy_exm_be.yml
+++ b/.github/workflows/build_deploy_exm_be.yml
@@ -7,15 +7,16 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  build-and-deploy:
+  build:
+    name: Build Backend Application
     runs-on: ubuntu-latest
-    environment: deploy
 
     steps:
     - name: Checkout code
@@ -34,15 +35,32 @@ jobs:
       run: mvn clean install
       working-directory: expenses-manager-backend
 
-    - name: List target directory contents
-      run: ls -l expenses-manager-backend/target/
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: backend-build
+        path: expenses-manager-backend/target/*.jar
+
+  deploy:
+    name: Deploy to VM
+    runs-on: ubuntu-latest
+    needs: build
+    environment: deploy
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request'
+
+    steps:
+    - name: Download build artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: backend-build
+
 
     - name: Azure CLI Login
       uses: azure/login@v2
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+       client-id: ${{ secrets.AZURE_CLIENT_ID }}
+       tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+       subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - name: Get VM Public IP
       id: get-vm-ip
@@ -72,7 +90,7 @@ jobs:
 
     - name: Copy Artifact to VM
       run: |
-       scp -i ssh_key -o StrictHostKeyChecking=no expenses-manager-backend/target/*.jar ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }}:/home/admin/expenses-manager-backend.jar
+       scp -i ssh_key -o StrictHostKeyChecking=no backend-build/*.jar ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }}:/home/admin/expenses-manager-backend.jar
 
     - name: Run Backend Application
       run: |
