Setup two-stage pipeline for build and deploy BE (1)

--- a/.github/workflows/build_deploy_exm_be.yml
+++ b/.github/workflows/build_deploy_exm_be.yml
@@ -53,6 +53,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: backend-build
+        path: ./backend-build
 
 
     - name: Azure CLI Login
