--- a/expenses-manager-frontend/src/main/frontend/angular.json
+++ b/expenses-manager-frontend/src/main/frontend/angular.json
@@ -96,9 +96,15 @@
                         ],
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-                            "src/styles.css"
+                            "src/styles.css",
+                            "node_modules/bootstrap/scss/bootstrap.scss",
+                            "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+                            "src/styles.scss",
+                            "node_modules/ng-cdbangular/assets/scss/cdb.scss"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+                        ]
                     }
                 }
             }
