--- a/expenses-manager-backend/src/main/resources/application.properties
+++ b/expenses-manager-backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=expenses-manager-backend
+spring.profiles.default=PROD
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.sql.init.mode=always
