Configure Maven to build a jar
+ Added a shorter final name for jar

--- a/expenses-manager-backend/pom.xml
+++ b/expenses-manager-backend/pom.xml
@@ -75,6 +75,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>expenses-manager-backend</finalName>
     </build>
 
 </project>
