--- a/expenses-manager-frontend/src/main/frontend/package.json
+++ b/expenses-manager-frontend/src/main/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.1.0",
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@swimlane/ngx-charts": "^20.5.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.4.0",
@@ -33,6 +34,9 @@
     "@angular-devkit/build-angular": "~13.1.2",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-selection": "^3.0.10",
+    "@types/d3-shape": "^3.1.6",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
