--- a/expenses-manager-frontend/src/main/frontend/package.json
+++ b/expenses-manager-frontend/src/main/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
