--- a/expenses-manager-frontend/src/main/frontend/package.json
+++ b/expenses-manager-frontend/src/main/frontend/package.json
@@ -24,8 +24,12 @@
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@types/moment": "^2.11.29",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "install": "^0.13.0",
+    "moment": "^2.30.1",
+    "npm": "^10.8.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
