Fixed environment variable configuration for mvn build

--- a/.github/workflows/build_deploy_exm_be.yml
+++ b/.github/workflows/build_deploy_exm_be.yml
@@ -38,7 +38,12 @@ jobs:
 
     - name: Build Backend Application
       run: |
-         mvn clean install -DBE_BASE_URL=${{ secrets.BE_BASE_URL }} -DDB_URL=${{ secrets.DB_URL }} -DDB_USERNAME=${{ secrets.DB_USERNAME }} -DDB_PASSWORD=${{ secrets.DB_PASSWORD }}
+         mvn clean install
+         env: 
+          BE_BASE_URL: ${{ secrets.BE_BASE_URL }}
+          DB_URL: ${{ secrets.DB_URL }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       working-directory: expenses-manager-backend
 
     - name: Upload build artifacts
