fixed build&deploy be

--- a/.github/workflows/build_deploy_exm_be.yml
+++ b/.github/workflows/build_deploy_exm_be.yml
@@ -105,11 +105,10 @@ jobs:
       run: |
          ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
            nohup bash << 'EOF2' &
-           export DB_URL="${{ secrets.DB_URL }}"
-           export DB_USERNAME="${{ secrets.DB_USERNAME }}"
-           export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
-           export BE_BASE_URL="${{ secrets.BE_BASE_URL }}"
-           java -jar /home/admin/expenses-manager-backend.jar --spring.profiles.active=dev
+           export DATABASE_URL="${{ secrets.DB_URL }}"
+           export DATABASE_USERNAME="${{ secrets.DB_USERNAME }}"
+           export DATABASE_PASSWORD="${{ secrets.DB_PASSWORD }}"
+           java -jar /home/admin/expenses-manager-backend.jar --spring.profiles.active=prod
            EOF2
          EOF
      
