--- a/.github/workflows/build_deploy_exm_be.yml
+++ b/.github/workflows/build_deploy_exm_be.yml
@@ -104,12 +104,12 @@ jobs:
     - name: Run Backend Application
       run: |
          ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
-           nohup bash << 'EOF2' &
+           nohup bash << 'EOF2' 
            export DATABASE_URL="${{ secrets.DB_URL }}"
            export DATABASE_USERNAME="${{ secrets.DB_USERNAME }}"
            export DATABASE_PASSWORD="${{ secrets.DB_PASSWORD }}"
            java -jar /home/admin/expenses-manager-backend.jar --spring.profiles.active=prod
-           EOF2
+           EOF2 &
          EOF
      
 
