--- a/.github/workflows/build_deploy_exm_be.yml
+++ b/.github/workflows/build_deploy_exm_be.yml
@@ -103,14 +103,14 @@ jobs:
 
     - name: Run Backend Application
       run: |
-         ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
-           nohup bash << 'EOF2' 
+         ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<content
+           nohup bash << finish &
            export DATABASE_URL="${{ secrets.DB_URL }}"
            export DATABASE_USERNAME="${{ secrets.DB_USERNAME }}"
            export DATABASE_PASSWORD="${{ secrets.DB_PASSWORD }}"
            java -jar /home/admin/expenses-manager-backend.jar --spring.profiles.active=prod
-           EOF2 &
-         EOF
+           finish 
+         content
      
 
     - name: Remove SSH private key file
