--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -31,6 +31,14 @@ jobs:
     - name: Download and install Maven
       run: sudo apt-get update && sudo apt-get install -y maven
 
+    - name: Azure CLI Login
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+
     - name: Get VM Public IP
       id: get-vm-ip
       run: |
@@ -63,13 +71,6 @@ jobs:
         name: frontend-build 
         path: ./frontend-build
         
-    - name: Azure CLI Login
-      uses: azure/login@v2
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
     - name: Get VM Public IP
       id: get-vm-ip
       run: |
