--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -46,6 +46,10 @@ jobs:
         echo "vm_ip=$(az vm list-ip-addresses --name ${{ secrets.EXM_VM_NAME }} --resource-group ${{ secrets.RESOURCE_GROUP_NAME }} --query "[0].virtualMachine.network.publicIpAddresses[0].ipAddress" -o tsv)" >> $GITHUB_OUTPUT
       if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
 
+    - name: Replace BE_BASE_URL in environment.prod.ts
+      run: sed -i 's/%{BE_BASE_URL}/${{ steps.get-vm-ip.outputs.vm_ip }}/' expenses-manager-frontend/src/main/frontend/src/environments/environment.prod.ts
+      if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+
     - name: Build Angular application using Maven
       run: |
          mvn clean install -DBE_BASE_URL=${{ steps.get-vm-ip.outputs.vm_ip }}:8080
